update swagger & omit verification
