# routes/users/users.js
@@ -7,26 +7,21 @@ const {
     loginController,
     logoutController,
     currentUserController,
-    uploadAvatarController,
-    resendingController
 } = require("../../controllers/users/index");
 
 const { asyncWrapper } = require("../../helpers/index");
-const {addUserValidation, authMiddleware, uploadAvatarMiddleware} = require("../../middlewares/index");
-const { verificationController } = require('../../controllers/users/index');
+const {
+  addUserValidation,
+  loginUserValidation, authMiddleware,
+} = require("../../middlewares/index");
 
 
 
 
 router.post('/register', addUserValidation, asyncWrapper(registrationController));
-router.get('/verify/:verificationToken', asyncWrapper(verificationController));
-router.post('/verify', asyncWrapper(resendingController));
-
-
-router.post('/login', addUserValidation, asyncWrapper(loginController));
+router.post("/login", loginUserValidation, asyncWrapper(loginController));
 router.post('/logout', authMiddleware, asyncWrapper(logoutController));
 router.get('/current', authMiddleware, asyncWrapper(currentUserController));
-router.patch('/avatars', authMiddleware, uploadAvatarMiddleware.single("avatar"), asyncWrapper(uploadAvatarController));
 
 
 
